# atscribe

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: linter.yml
src/: atscribe.py  main.py
src/services/: google_genai_service.py  message_persistence_service.py  ollama_service.py
src/utils/: constants.py
